# rotstream

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  getBuildVersion.sh
src/: CMakeLists.txt  libargs.c  liblogging.c  liblogging.h  librotstream.c  rotstream.c  test_getaddrinfo.c
src/headers/: libargs.h  liblogging.h  librotstream.h  libversion.h
src/libs/: argtable3.c
